<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        style="@style/header_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_header"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        tools:layout_editor_absoluteX="30dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_sub_header"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintEnd_toStartOf="parent"
         />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/red_channel_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/red_channel_text"
        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintEnd_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/red_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:digits="ABCDEFabcdef0123456789"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/green_channel_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:hint="@string/green_channel_text"
        app:layout_constraintTop_toBottomOf="@id/red_channel_wrapper"
        app:layout_constraintEnd_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/green_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:digits="ABCDEFabcdef0123456789"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blue_channel_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blue_channel_text"
        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@id/green_channel_wrapper"
        app:layout_constraintEnd_toStartOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blue_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:digits="ABCDEFabcdef0123456789"
            />
    </com.google.android.material.textfield.TextInputLayout>






    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_greeting"
        android:id="@+id/color_creator_button"
        android:text="@string/btn_text"
        app:layout_constraintTop_toBottomOf="@id/blue_channel_wrapper"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/color_creator_display"
        android:layout_width="match_parent"
        style="@style/greeting_display"
        app:layout_constraintTop_toBottomOf="@id/color_creator_button"
        app:layout_constraintStart_toStartOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>